SJ-58 기이수 파일 데이터 DB 업로드 기능 구현
로그인한 유저의 학번 데이터를 넣어줘야하지만 로그인 구현 전이라 임의로 학번을 넣어주었음.

--- a/src/main/resources/templates/excelList.html
+++ b/src/main/resources/templates/excelList.html
@@ -21,7 +21,7 @@
   <tr th:each="data : ${datas}">
     <td th:text="${data.year}"></td>
     <td th:text="${data.semester}"></td>
-    <td th:text="${data.course_id}"></td>
+    <td th:text="${data.coursesDomain.getCourseId()}"></td>
   </tr>
   </tbody>
 </table>
