--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
+  <title>사용자 가입</title>
 </head>
 <body>
 
-<h2>회원가입</h2>
+<h2>사용자 가입</h2>
 
-<form method="post">
-  <label for="studentId">학번:</label>
-  <input type="text" id="studentId" name="studentId" required>
-  <br>
+<form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
+  <div>
+    <label for="studentId">학번:</label>
+    <input type="text" id="studentId" th:field="*{studentId}" />
+    <span th:if="${#fields.hasErrors('studentId')}" th:errors="*{studentId}"></span>
+  </div>
 
-  <label for="password1">비밀번호:</label>
-  <input type="password" id="password1" name="password1" required>
-  <br>
+  <div>
+    <label for="password1">비밀번호:</label>
+    <input type="password" id="password1" th:field="*{password1}" />
+    <span th:if="${#fields.hasErrors('password1')}" th:errors="*{password1}"></span>
+  </div>
 
-  <label for="password2">비밀번호 확인:</label>
-  <input type="password" id="password2" name="password2" required>
-  <br>
+  <div>
+    <label for="password2">비밀번호 확인:</label>
+    <input type="password" id="password2" th:field="*{password2}" />
+    <span th:if="${#fields.hasErrors('password2')}" th:errors="*{password2}"></span>
+  </div>
 
-  <label for="email">이메일:</label>
-  <input type="email" id="email" name="email" required>
-  <br>
+  <div>
+    <label for="email">이메일:</label>
+    <input type="text" id="email" th:field="*{email}" />
+    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+  </div>
 
-  <label for="major">학과:</label>
-  <select id="major" name="major" required>
-    <option value="컴퓨터공학과">컴퓨터공학과</option>
-    <option value="전자정보통신공학과">전자정보통신공학과</option>
-  </select>
-  <br>
+  <div>
+    <label for="major">학과:</label>
+    <select id="major" th:field="*{major}">
+      <option value="">-- 선택하세요 --</option>
+      <option value="컴퓨터공학과">컴퓨터공학과</option>
+      <option value="전자정보통신공학과">전자정보통신공학과</option>
+    </select>
+    <span th:if="${#fields.hasErrors('major')}" th:errors="*{major}"></span>
+  </div>
 
-  <label for="name">이름:</label>
-  <input type="text" id="name" name="name" required>
-  <br>
+  <div>
+    <label for="name">이름:</label>
+    <input type="text" id="name" th:field="*{name}" />
+    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+  </div>
 
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-
-  <input type="submit" value="가입하기">
+  <div>
+    <button type="submit">가입하기</button>
+  </div>
 </form>
 
 </body>
