Refactor: Navbar추가, bootstrap 디자인 적용

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,13 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-<p>main page!</p>
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+  <table class="table">
+    <p>main page</p>
+  </table>
+</div>
 </html>
