--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -1,30 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-<div>
-  <form th:action="@{/user/login}" method="post">
-    <div th:if="${param.error}">
-      <div>
-        사용자ID 또는 비밀번호를 확인해 주세요.
-      </div>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+  <form th:action="@{/user/login}" method="post" class="needs-validation" novalidate>
+    <div th:if="${param.error}" class="alert alert-danger">
+      사용자ID 또는 비밀번호를 확인해 주세요.
     </div>
-    <div class>
-      <label for="username">학번</label>
-      <input type="text" name="username" id="username">
+
+    <div class="mb-3">
+      <label for="username" class="form-label">학번</label>
+      <input type="text" name="username" id="username" class="form-control" required>
+      <div class="invalid-feedback">학번을 입력하세요.</div>
     </div>
-    <div>
-      <label for="password">비밀번호</label>
-      <input type="password" name="password" id="password">
+
+    <div class="mb-3">
+      <label for="password" class="form-label">비밀번호</label>
+      <input type="password" name="password" id="password" class="form-control" required>
+      <div class="invalid-feedback">비밀번호를 입력하세요.</div>
     </div>
-    <button type="submit">로그인</button>
+
+    <button type="submit" class="btn btn-primary">로그인</button>
   </form>
 </div>
-</body>
 </html>
