--- a/src/main/resources/templates/withdrawal.html
+++ b/src/main/resources/templates/withdrawal.html
@@ -10,7 +10,7 @@
              placeholder="비밀번호를 입력하세요." required>
       <div class="invalid-feedback">비밀번호를 입력하세요.</div>
     </div>
-    <button type="submit" class="btn btn-primary">로그인</button>
+    <button type="submit" class="btn btn-primary">회원 탈퇴</button>
   </form>
 </div>
 </html>
