--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -67,6 +67,9 @@
     <div class="mb-3" id="verificationCodeSection2" style="display:none;">
       <button type="button" onclick="verifyEmailCode();" class="btn btn-primary">인증번호 확인</button>
     </div>
+
+    <div class="mb-3">
+      <button type="button" class="btn btn-primary" onclick="verifyStatus();">가입하기</button>
     </div>
     <script type="text/javascript">
       function sendVerificationEmail() {
@@ -113,6 +116,24 @@
           }
         };
         var data = JSON.stringify({"email": email, "verifyCode": code});
+        xhr.send(data);
+      }
+
+      function verifyStatus() {
+        var email = document.getElementById("email").value;
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/user/verify-status", true);
+        xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+        xhr.onreadystatechange = function () {
+          if (xhr.readyState === 4 && xhr.status === 200) {
+            if (xhr.responseText.includes("인증된 이메일입니다.")) {
+              document.querySelector('form').submit();
+            } else {
+              alert("이메일 인증을 완료하세요.");
+            }
+          }
+        };
+        var data = JSON.stringify({"email": email});
         xhr.send(data);
       }
     </script>
