--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -121,8 +121,9 @@
           if (xhr.readyState === 4 && xhr.status === 200) {
             if (xhr.responseText.includes("인증된 이메일입니다.")) {
               document.querySelector('form').submit();
-            } else {
-              alert("이메일 인증을 완료하세요.");
+            }
+            else{
+              alert(xhr.responseText);
             }
           }
         };
