Refactor: 패키지 구조 변경
1. templates 파일을 패키지에 따라 세분화함
2. js 파일 분리
3. 중복된 bootstrap 파일 삭제 및 통일

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,22 +6,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-  <!-- CSS -->
-  <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
   <title>공학인증검사</title>
 </head>
 
 <body>
 <!-- 네비게이션바 -->
-<nav th:replace="~{navbar :: navbarFragment}"></nav>
+<nav th:replace="~{layout/navbar :: navbarFragment}"></nav>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- Namespace 'layout' is not bound 오류 발생시 -->
 <!-- File - Settings - inspections - Unbound namespace prefix 체크해제 -->
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
-<!-- Bootstrap JS -->
-<script th:src="@{/bootstrap.min.js}"></script>
 </body>
 
 </html>
