--- a/src/main/resources/templates/excel/excelList.html
+++ b/src/main/resources/templates/excel/excelList.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="container my-3">
   <table class="table table-striped">
     <thead>
