--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="container my-3">
   <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
         class="needs-validation" novalidate>
