--- a/src/main/resources/templates/user/withdrawal.html
+++ b/src/main/resources/templates/user/withdrawal.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="container my-3">
   <form th:action="@{/user/withdrawal}" method="post" class="needs-validation" novalidate>
     <div th:if="${withdrawalError}" class="alert alert-danger">
