Refacotr: 인증상태구현
1. 기존 학번입력시 결과창 post 방식에서 로그인한 유저의 학번을 이용해서 결과를 get 하는 방식으로 변경
2. navbar에 "인증 상태 확인" 추가
3. 기존 layout 폼과 status 폼 통합

--- a/src/main/resources/templates/gonghak/statusForm.html
+++ b/src/main/resources/templates/gonghak/statusForm.html
@@ -1,17 +1,5 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="utf-8">
-  <link th:href="@{/css/bootstrap.min.css}"
-        href="../static/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .container {
-      max-width: 560px;
-    }
-  </style>
-</head>
-<body>
-<div class="container">
+<html layout:decorate="~{layout/layout}">
+<div layout:fragment="content" class="container my-3">
 
   <div class="py-5 text-center">
     <h2>RESULT RATIO</h2>
@@ -61,4 +49,4 @@
 
 </div>
 </div>
-</body>
+</html>
