--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -18,6 +18,9 @@
           <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
+          <a class="nav-link" th:href="@{/gonghak/status}">인증 상태 확인</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
           <a class="nav-link" th:href="@{/excel}">기이수 파일 업로드</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
