--- a/src/main/resources/templates/layout/layout2.html
+++ b/src/main/resources/templates/layout/layout2.html
@@ -21,7 +21,7 @@
 <!-- 네비게이션바 -->
 <nav th:replace="~{layout/navbar :: navbarFragment}"></nav>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
-<div class="row justify-content-center" style="font-family: IBM Plex Mono">
+<div class="row justify-content-center" style="max-width: 100dvw;font-family: IBM Plex Mono">
   <div class="col-3 text-center" style="font-weight: bold;">
     <div style="margin-top: 100px; margin-bottom: 70px">
       <a href="/gonghak/status">
