--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -1,33 +1,54 @@
-<html layout:decorate="~{layout/layout}">
+<html layout:decorate="~{layout/layout2}">
 <div layout:fragment="content" class="container my-3">
-  <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
-        class="needs-validation" novalidate>
-    <div class="mb-3">
-      <label for="currentPassword" class="form-label">기존 비밀번호</label>
-      <input type="password" id="currentPassword" th:field="*{currentPassword}" class="form-control"
-             placeholder="기존 비밀번호를 입력하세요." required>
-      <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"
-            class="text-danger"></span>
+  <div class="window" style="width: 100%;margin-top: 10%">
+    <div class="title-bar">
+      <div class="title-bar-text " style="font-size: 30px">
+        비밀번호 변경
+      </div>
+      <div class="title-bar-controls" style="margin-right: 10px">
+        <button style="margin-right: 20px">
+          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+        </button>
+        <button>
+          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+        </button>
+      </div>
     </div>
+    <div class="window-body" style="text-align: center">
+      <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
+            class="needs-validation" novalidate>
 
-    <div class="mb-3">
-      <label for="newPassword1" class="form-label">새로운 비밀번호</label>
-      <input type="password" id="newPassword1" th:field="*{newPassword1}" class="form-control"
-             placeholder="새로운 비밀번호를 입력하세요." required>
-      <span th:if="${#fields.hasErrors('newPassword1')}" th:errors="*{newPassword1}"
-            class="text-danger"></span>
-    </div>
+        <div class="row" style="margin-bottom: 40px; margin-top: 40px;">
+          <label for="currentPassword" class="form-label col-2 md-3" style="font-size: 1.5rem; text-align: center;">기존 비밀번호</label>
+          <input type="password" id="currentPassword" th:field="*{currentPassword}" class="form-control-lg col-md-9"
+                 placeholder="기존 비밀번호를 입력하세요." required>
+          <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"
+                class="text-danger" style="font-size: 1rem; margin-left: 13rem;"></span>
+        </div>
 
-    <div class="mb-3">
-      <label for="newPassword2" class="form-label">새로운 비밀번호 확인</label>
-      <input type="password" id="newPassword2" th:field="*{newPassword2}" class="form-control"
-             placeholder="새로운 비밀번호를 다시 입력하세요." required>
-      <span th:if="${#fields.hasErrors('newPassword2')}" th:errors="*{newPassword2}"
-            class="text-danger"></span>
+        <div class="row" style="margin-bottom: 40px">
+          <label for="newPassword1" class="form-label col-2" style="font-size: 1.5rem; text-align: right">새 비밀번호</label>
+          <input type="password" id="newPassword1" th:field="*{newPassword1}" class="form-control-lg col-9"
+                 placeholder="새로운 비밀번호를 입력하세요." required>
+          <span th:if="${#fields.hasErrors('newPassword1')}" th:errors="*{newPassword1}"
+                class="text-danger" style="font-size: 1rem;"></span>
+        </div>
+
+        <div class="row" style="margin-bottom: 40px">
+          <label for="newPassword2" class="form-label col-2" style="font-size: 1.5rem; text-align: right">새 비밀번호 확인</label>
+          <input type="password" id="newPassword2" th:field="*{newPassword2}" class="form-control-lg col-9"
+                 placeholder="새로운 비밀번호를 다시 입력하세요." required>
+          <span th:if="${#fields.hasErrors('newPassword2')}" th:errors="*{newPassword2}"
+                class="text-danger" style="font-size: 1rem;"></span>
+        </div>
+        <div class="row" style="text-align: center;">
+          <div class="col m-2">
+            <button type="button" class="btn-lg" onclick="location.href='/user'" style="height: 40px; width: 130px; margin-right: 10px;">< Back</button>
+            <button type="submit" class="btn-lg" style="height: 40px; width: 130px">변경하기</button>
+          </div>
+        </div>
+      </form>
     </div>
-    <div class="mb-3">
-      <button type="submit" class="btn btn-primary">변경하기</button>
-    </div>
-  </form>
+  </div>
 </div>
 </html>
