--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -13,67 +13,95 @@
       </div>
     </div>
     <div class="window-body row">
-      <div class="col-lg-3 col-md-6 col-sm-12" style="display: flex; justify-content: center; align-items: center">
-        <img src="/images/login.png" style="max-width: 100%; height: auto; max-height: 100%; padding: 10px">
+      <div class="col-lg-3 col-md-6 col-sm-12"
+           style="display: flex; justify-content: center; align-items: center">
+        <img src="/images/login.png"
+             style="max-width: 100%; height: auto; max-height: 100%; padding: 10px">
       </div>
       <div class="col-8">
         <form th:action="@{/user/signup}" th:object="${userJoinDto}" method="post"
               class="needs-validation" novalidate>
           <div class="row" style="margin-bottom: 20px; margin-top: 30px">
-            <label for="studentId" class="form-label col-3" style = "font-size: 1.5rem; text-align: right">학번</label>
-            <input type="text" id="studentId" th:field="*{studentId}" class="form-control-lg col-9" required>
+            <label for="studentId" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right ; padding-top: 0.4rem">학번</label>
+            <input type="text" id="studentId" th:field="*{studentId}" class="form-control-lg col-9"
+                   required>
             <span th:if="${#fields.hasErrors('studentId')}" th:errors="*{studentId}"
                   class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px">
-            <label for="password1" class="form-label col-3" style = "font-size: 1.5rem; text-align: right">비밀번호</label>
-            <input type="password" id="password1" th:field="*{password1}" class="form-control-lg col-9" required>
+            <label for="password1" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right ; padding-top: 0.4rem ">비밀번호</label>
+            <input type="password" id="password1" th:field="*{password1}"
+                   class="form-control-lg col-9" required>
             <span th:if="${#fields.hasErrors('password1')}" th:errors="*{password1}"
                   class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px">
-            <label for="password2" class="form-label col-3" style = "font-size: 1.5rem; text-align: right">비밀번호 확인</label>
-            <input type="password" id="password2" th:field="*{password2}" class="form-control-lg col-9" required>
+            <label for="password2" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right ; padding-top: 0.4rem">비밀번호
+              확인</label>
+            <input type="password" id="password2" th:field="*{password2}"
+                   class="form-control-lg col-9" required>
             <span th:if="${#fields.hasErrors('password2')}" th:errors="*{password2}"
                   class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px">
-            <label for="major" class="form-label col-3" style = "font-size: 1.5rem; text-align: right">학과</label>
+            <label for="major" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right ; padding-top: 0.4rem">학과</label>
             <select id="major" th:field="*{major}" class="form-control-lg col-9" required>
               <option value="">-- 선택하세요 --</option>
               <option value="컴퓨터공학과">컴퓨터공학과</option>
               <option value="전자정보통신공학과">전자정보통신공학과</option>
             </select>
-            <span th:if="${#fields.hasErrors('major')}" th:errors="*{major}" class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+            <span th:if="${#fields.hasErrors('major')}" th:errors="*{major}" class="text-danger"
+                  style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px;">
-            <label for="name" class="form-label col-3" style = "font-size: 1.5rem; text-align: right">이름</label>
+            <label for="name" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem">이름</label>
             <input type="text" id="name" th:field="*{name}" class="form-control-lg col-9" required>
-            <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+            <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"
+                  style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px; align-items: center;">
-            <label for="email" class="form-label col-3" style="font-size: 1.5rem; text-align: right;">이메일</label>
-            <input type="text" id="email" th:field="*{email}" class="form-control-lg col-6" required>
-            <button type="button" onclick="sendVerificationEmail();" class="col-2 btn-lg m-3" style="height: 40px; width: 130px; font-size: 20px">인증 발송</button>
-            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+            <label for="email" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem">이메일</label>
+            <input type="text" id="email" th:field="*{email}" class="form-control-lg col-6"
+                   required>
+            <button type="button" onclick="sendVerificationEmail();" class="col-2 btn-lg m-3"
+                    style="height: 40px; width: 130px; font-size: 20px">인증 발송
+            </button>
+            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"
+                  style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
-          <div class="row" style="margin-bottom: 20px; visibility: hidden; align-items: center;" id="verificationCodeSection1">
-            <label for="verifyCode" class="form-label col-3" style="font-size: 1.5rem; text-align: right;">인증 입력</label>
-            <input type="number" id="verifyCode" th:field="*{verifyCode}" class="form-control-lg col-6" required>
-            <button type="button" onclick="verifyEmailCode();" class="col-3 btn-lg m-3" style="height: 40px; width: 130px; font-size: 20px">인증 확인</button>
-            <span th:if="${#fields.hasErrors('verifyCode')}" th:errors="*{verifyCode}" class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+          <div class="row" style="margin-bottom: 20px; visibility: hidden; align-items: center;"
+               id="verificationCodeSection1">
+            <label for="verifyCode" class="form-label col-3"
+                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem">인증 입력</label>
+            <input type="number" id="verifyCode" th:field="*{verifyCode}"
+                   class="form-control-lg col-6" required>
+            <button type="button" onclick="verifyEmailCode();" class="col-3 btn-lg m-3"
+                    style="height: 40px; width: 130px; font-size: 20px">인증 확인
+            </button>
+            <span th:if="${#fields.hasErrors('verifyCode')}" th:errors="*{verifyCode}"
+                  class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
           </div>
 
           <div class="row" style="text-align: right;">
             <div class="col m-2">
-              <button type="button" class="btn-lg" onclick="location.href='/'" style="height: 40px; width: 130px; margin-right: 10px;">< Back</button>
-              <button type="button" class="btn-lg" onclick="verifyStatus();" style="height: 40px; width: 130px">Sign up</button>
+              <button type="button" class="btn-lg" onclick="location.href='/'"
+                      style="height: 40px; width: 130px; margin-right: 10px;">< Back
+              </button>
+              <button type="button" class="btn-lg" onclick="verifyStatus();"
+                      style="height: 40px; width: 130px">Sign up
+              </button>
             </div>
           </div>
           <script src="/js/verify.js"></script>
