--- a/src/main/resources/templates/user/withdrawal.html
+++ b/src/main/resources/templates/user/withdrawal.html
@@ -20,9 +20,10 @@
           <span style="font-size: 1rem" th:text="${withdrawalError}"></span>
         </div>
         <div class="row" style="margin-bottom: 40px; margin-top: 40px">
-          <label for="password" class="form-label col-2"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem">비밀번호</label>
-          <input type="password" name="password" id="password" class="form-control-lg col-9"
+          <label for="password" class="form-label col-xl-2 col-lg-1 col-md-1 col-sm-1 col-1"
+                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem; width: 190px; display: inline-block">비밀번호</label>
+          <input type="password" name="password" id="password"
+                 class="form-control-lg col-xl-9 col-lg-7 col-md-7 col-sm-5 col-5"
                  placeholder="비밀번호를 입력하세요." required>
           <div class="invalid-feedback" style="font-size: 1rem">비밀번호를 입력하세요.</div>
         </div>
