--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -17,32 +17,34 @@
     <div class="window-body" style="text-align: center">
       <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
             class="needs-validation" novalidate>
-
         <div class="row" style="margin-bottom: 40px; margin-top: 40px;">
-          <label for="currentPassword" class="form-label col-2"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem">기존 비밀번호</label>
+          <label for="currentPassword" class="form-label col-xl-2 col-md-3 col-sm-3"
+                 style="font-size: 1.4rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">기존
+            비밀번호</label>
           <input type="password" id="currentPassword" th:field="*{currentPassword}"
-                 class="form-control-lg col-md-9"
+                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
                  placeholder="기존 비밀번호를 입력하세요." required>
           <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"
-                class="text-danger" style="font-size: 1rem; margin-left: 13rem;"></span>
+                class="text-danger" style="font-size: 1rem;"></span>
         </div>
 
         <div class="row" style="margin-bottom: 40px">
-          <label for="newPassword1" class="form-label col-2"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem">새 비밀번호</label>
+          <label for="newPassword1" class="form-label col-xl-2 col-md-3 col-sm-3"
+                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">새
+            비밀번호</label>
           <input type="password" id="newPassword1" th:field="*{newPassword1}"
-                 class="form-control-lg col-9"
+                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
                  placeholder="새로운 비밀번호를 입력하세요." required>
           <span th:if="${#fields.hasErrors('newPassword1')}" th:errors="*{newPassword1}"
                 class="text-danger" style="font-size: 1rem;"></span>
         </div>
 
         <div class="row" style="margin-bottom: 40px">
-          <label for="newPassword2" class="form-label col-2"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem">새 비밀번호 확인</label>
+          <label for="newPassword2" class="form-label col-xl-2 col-md-3 col-sm-3"
+                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">새
+            비밀번호 확인</label>
           <input type="password" id="newPassword2" th:field="*{newPassword2}"
-                 class="form-control-lg col-9"
+                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
                  placeholder="새로운 비밀번호를 다시 입력하세요." required>
           <span th:if="${#fields.hasErrors('newPassword2')}" th:errors="*{newPassword2}"
                 class="text-danger" style="font-size: 1rem;"></span>
@@ -59,4 +61,20 @@
     </div>
   </div>
 </div>
+<style>
+  /* PC (해상도 1024px)*/
+  @media all and (min-width: 1024px) {
+    ...
+  }
+
+  /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/
+  @media all and (min-width: 768px) and (max-width: 1023px) {
+    ...
+  }
+
+  /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/
+  @media all and (max-width: 767px) {
+    ...
+  }
+</style>
 </html>
