--- a/src/main/resources/templates/user/information.html
+++ b/src/main/resources/templates/user/information.html
@@ -16,32 +16,37 @@
     </div>
     <div class="window-body" style="text-align: center">
       <div class="row">
-        <div class="col-5" style="margin-top:50px">
-          <img src = "/images/profile.png" style="width: 300px; height: 300px">
+        <div class="col-lg-5 col-md-12" style="margin-top:50px">
+          <img src="/images/profile.png" class="img-fluid">
         </div>
-        <div class="col-7" style="font-size: 35px; margin-top: 50px; margin-bottom: 20px">
+        <div class="col-lg-7 col-md-12"
+             style="font-size: 35px; margin-top: 50px; margin-bottom: 20px">
           <div class="row">
             <p class="col-3">이름 : </p>
-            <p class="col-9" th:text = "${user.getName()}"></p>
+            <p class="col-9" th:text="${user.getName()}"></p>
           </div>
           <div class="row" style="margin-bottom: 20px">
             <p class="col-3">학번 : </p>
-            <p class="col-9" th:text = "${user.getStudentId()}"></p>
+            <p class="col-9" th:text="${user.getStudentId()}"></p>
           </div>
           <div class="row" style="margin-bottom: 20px">
             <p class="col-3">학과 : </p>
-            <p class="col-9" th:text = "${user.getMajorsDomain().getMajor()}"></p>
+            <p class="col-9" th:text="${user.getMajorsDomain().getMajor()}"></p>
           </div>
           <div class="row">
             <p class="col-3">메일 : </p>
-            <p class="col-9" th:text = "${user.getEmail()}"></p>
+            <p class="col-9" th:text="${user.getEmail()}"></p>
           </div>
         </div>
       </div>
       <div class="row" style="text-align: center; margin-top: 50px">
         <div class="col m-2">
-          <button type="button" class="btn-lg" onclick="location.href='/user/change/password'" style="height: 60px; width: 190px; margin-right: 10px;">비밀번호 변경</button>
-          <button type="button" class="btn-lg" onclick="location.href='/user/withdrawal'" style="height: 60px; width: 190px">회원 탈퇴</button>
+          <button type="button" class="btn-lg" onclick="location.href='/user/change/password'"
+                  style="height: 60px; width: 190px; margin-right: 10px;">비밀번호 변경
+          </button>
+          <button type="button" class="btn-lg" onclick="location.href='/user/withdrawal'"
+                  style="height: 60px; width: 190px">회원 탈퇴
+          </button>
         </div>
       </div>
     </div>
