fix: 정적 파일 반환 에러 해결
- index.html 파일 에러 해결 필요

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://unpkg.com/98.css"
   >
-  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/static/css/bootstrap.min.css}">
   <title>공학인증검사</title>
 </head>
 
