--- a/src/main/resources/templates/layout/layout2.html
+++ b/src/main/resources/templates/layout/layout2.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://unpkg.com/98.css"
   >
-  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/static/css/bootstrap.min.css}">
   <title>공학인증검사</title>
 </head>
 
@@ -24,20 +24,20 @@
 <div class="row justify-content-center" style="max-width: 100dvw;font-family: IBM Plex Mono">
   <div class="col-3 text-center" style="font-weight: bold;">
     <div style="margin-top: 100px; margin-bottom: 70px">
-      <a href="/gonghak/status">
-        <img src="/images/information.png" style="width: 70px; height: 70px; margin-bottom: 10px">
+      <a href="/api/gonghak/status">
+        <img src="/static/images/information.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">인증정보 확인</p>
     </div>
     <div style="margin-bottom: 70px">
-      <a href="/excel">
-        <img src="/images/completed.png" style="width: 70px; height: 70px; margin-bottom: 10px">
+      <a href="/api/excel">
+        <img src="/static/images/completed.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">기이수 과목</p>
     </div>
     <div>
-      <a href="/user">
-        <img src="/images/password.png" style="width: 70px; height: 70px; margin-bottom: 10px">
+      <a href="/api/user">
+        <img src="/static/images/password.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">내 정보</p>
     </div>
