--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -7,10 +7,10 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
       </div>
     </div>
