--- a/src/main/resources/templates/user/information.html
+++ b/src/main/resources/templates/user/information.html
@@ -7,17 +7,17 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
       </div>
     </div>
     <div class="window-body" style="text-align: center">
       <div class="row">
         <div class="col-lg-5 col-md-12" style="margin-top:50px">
-          <img src="/images/profile.png" class="img-fluid">
+          <img src="/static/images/profile.png" class="img-fluid">
         </div>
         <div class="col-lg-7 col-md-12"
              style="font-size: 35px; margin-top: 50px; margin-bottom: 20px">
@@ -41,10 +41,10 @@
       </div>
       <div class="row" style="text-align: center; margin-top: 50px">
         <div class="col m-2">
-          <button type="button" class="btn-lg" onclick="location.href='/user/change/password'"
+          <button type="button" class="btn-lg" onclick="location.href='/api/user/change/password'"
                   style="height: 60px; width: 190px; margin-right: 10px;">비밀번호 변경
           </button>
-          <button type="button" class="btn-lg" onclick="location.href='/user/withdrawal'"
+          <button type="button" class="btn-lg" onclick="location.href='/api/user/withdrawal'"
                   style="height: 60px; width: 190px">회원 탈퇴
           </button>
         </div>
