--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,15 +8,15 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
       </div>
     </div>
     <div class="window-body">
-      <form th:action="@{/user/login}" method="post" class="needs-validation" novalidate>
+      <form th:action="@{/api/user/login}" method="post" class="needs-validation" novalidate>
         <div th:if="${param.error}" class="alert alert-danger">
           사용자ID 또는 비밀번호를 확인해 주세요.
         </div>
@@ -24,7 +24,7 @@
              style="display: flex; justify-content: center; margin-bottom: 60px; margin-top: 50px">
           <div class="col-3"
                style="display: flex; justify-content: center; height: 150px; width: 150px">
-            <img src="/images/networkNormalTwoPcs2.png">
+            <img src="/static/images/networkNormalTwoPcs2.png">
           </div>
           <div class="col-7">
             <p style="font-size: 40px">
@@ -39,7 +39,7 @@
             </div>
             <div>
               <button class="btn-lg" type="button" style="height: 40px; width: 130px"
-                      onclick="location.href='/user/signup'">Sign in
+                      onclick="location.href='/api/user/signup'">Sign in
               </button>
             </div>
           </div>
