--- a/src/main/resources/templates/user/resetVerify.html
+++ b/src/main/resources/templates/user/resetVerify.html
@@ -5,6 +5,6 @@
     <input type="email" id="email" name="email" required><br><br>
     <button type="submit" class="btn btn-primary">인증 초기화</button>
   </form>
-  <script src="/js/verify.js"></script>
+  <script src="/static/js/verify.js"></script>
 </div>
 </html>
