--- a/src/main/resources/templates/excel/excelList.html
+++ b/src/main/resources/templates/excel/excelList.html
@@ -8,10 +8,10 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
       </div>
     </div>
@@ -36,7 +36,7 @@
           </tbody>
         </table>
       </div>
-      <form th:action="@{/excel/read}" method="POST" enctype="multipart/form-data"
+      <form th:action="@{/api/excel/read}" method="POST" enctype="multipart/form-data"
             onsubmit="return checkFileSize()"
             class="needs-validation" novalidate style="font-size:15px">
         <!-- 파일 크기 초과 시 에러 메시지 표시 -->
@@ -65,7 +65,7 @@
       <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
       <!-- 파일 크기 확인을 위한 JavaScript -->
-      <script src="/js/excel.js"></script>
+      <script src="/static/js/excel.js"></script>
     </div>
   </div>
 </div>
