--- a/src/main/resources/templates/gonghak/statusInputForm.html
+++ b/src/main/resources/templates/gonghak/statusInputForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <link th:href="@{/css/bootstrap.min.css}"
+  <link th:href="@{/static/css/bootstrap.min.css}"
         href="../static/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .container {
@@ -32,7 +32,7 @@
     <hr class="my-4">
     <div class="col">
       <button class="w-100 btn btn-primary btn-lg" onclick="location.href='gonghak/statusForm.html'"
-              th:onclick="|location.href='@{/gonghak/status}'|" type="submit">입력</button>
+              th:onclick="|location.href='@{/api/gonghak/status}'|" type="submit">입력</button>
     </div>
   </form>
 </div>
