--- a/src/main/resources/templates/user/withdrawal.html
+++ b/src/main/resources/templates/user/withdrawal.html
@@ -7,15 +7,15 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
       </div>
     </div>
     <div class="window-body" style="text-align: center">
-      <form th:action="@{/user/withdrawal}" method="post" class="needs-validation" novalidate>
+      <form th:action="@{/api/user/withdrawal}" method="post" class="needs-validation" novalidate>
         <div th:if="${withdrawalError}" class="alert alert-danger">
           <span style="font-size: 1rem" th:text="${withdrawalError}"></span>
         </div>
