Feat: 결과화면 구현
1. 얻은학점/기준학점 값을 토대로 진행도를 퍼센트로 나타냄
2. 리스트 크기가 클 시 스크롤 바 생성
3. 진행도를 만족하여 recommendCourse 가 존재하지 않을시 보이지않도록 기능 구현

--- a/src/main/resources/templates/excel/excelList.html
+++ b/src/main/resources/templates/excel/excelList.html
@@ -19,7 +19,7 @@
       <div id="courseTable" class="table-container" style="max-height: 500px; overflow-y: auto; margin-top: 30px">
         <table class="table table-striped" style="font-size:20px">
           <thead style="position: sticky; top: 0; background-color: white;">
-          <tr>
+          <tr class="table-dark">
             <th scope="col">수강년도</th>
             <th scope="col">학기</th>
             <th scope="col">과목명</th>
